# nustarselectrica

./: .gitignore  GPS  PID_Fun.ino  README.md  gps
Radio/src/: Container.scala  Controller.scala  DataListener.scala  Terminal.form  Terminal.java  Terminal.scala  TransmitThread.scala
main_code/: CMakeLists.txt  MPU6050.cpp  MPU6050.h  MPU6050.ino  PID.cpp  display_header.h  main_2.cpp  main_code.ino  main_code_old.cpp.old  pid.h  radio.cpp  radio.h  radio_functions.h  sensors.cpp  sensors.h  storage.cpp  storage.h
main_code/MPU6050/: MPU6050.cpp  MPU6050.h
redone/: redone.ino
